// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Game /> 컴포넌트 DayTime > Discuss 렌더링 1`] = `
<Fragment>
  <div
    className="game-content"
  >
    <h2>
      낮 토론 시간입니다.
      <br />
       토론을 통해 마피아를 찾으세요.
    </h2>
  </div>
  <button
    className="btn-lg"
    onClick={[Function]}
  >
    투표로 이동
  </button>
</Fragment>
`;

exports[`<Game /> 컴포넌트 DayTime > Discuss 렌더링 2`] = `
Object {
  "children": <main
    className="daytime"
  >
    <h2
      className="game-title"
    >
      HELLO MAFIA
    </h2>
    <DayTime
      changeDayAndNight={[Function]}
      deletePlayer={[Function]}
      moveToMain={[Function]}
      players={
        Immutable.List [
          Immutable.Map {
            "name": "한영",
            "jobName": "CITIZEN",
            "daytimeVoted": 0,
          },
          Immutable.Map {
            "name": "병욱",
            "jobName": "MAFIA",
            "daytimeVoted": 0,
          },
          Immutable.Map {
            "name": "대용",
            "jobName": "DOCTOR",
            "daytimeVoted": 0,
          },
          Immutable.Map {
            "name": "기수",
            "jobName": "POLICE",
            "daytimeVoted": 0,
          },
        ]
      }
      votePerson={[Function]}
    />
  </main>,
}
`;

exports[`<Game /> 컴포넌트 DayTime 렌더링 1`] = `
<Fragment>
  <DayTimeDiscuss
    changeDayTimeOrder={[Function]}
  />
</Fragment>
`;

exports[`<Game /> 컴포넌트 html 렌더링 확인 1`] = `
<main
  className="daytime"
>
  <h2
    className="game-title"
  >
    HELLO MAFIA
  </h2>
  <DayTime
    changeDayAndNight={[Function]}
    deletePlayer={[Function]}
    moveToMain={[Function]}
    players={
      Immutable.List [
        Immutable.Map {
          "name": "한영",
          "jobName": "CITIZEN",
          "daytimeVoted": 0,
        },
        Immutable.Map {
          "name": "병욱",
          "jobName": "MAFIA",
          "daytimeVoted": 0,
        },
        Immutable.Map {
          "name": "대용",
          "jobName": "DOCTOR",
          "daytimeVoted": 0,
        },
        Immutable.Map {
          "name": "기수",
          "jobName": "POLICE",
          "daytimeVoted": 0,
        },
      ]
    }
    votePerson={[Function]}
  />
</main>
`;

exports[`<Game /> 컴포넌트 state 세팅 테스트 1`] = `
Object {
  "gameOrder": "day-time",
  "players": Immutable.List [
    Immutable.Map {
      "name": "한영",
      "jobName": "CITIZEN",
      "daytimeVoted": 0,
    },
    Immutable.Map {
      "name": "병욱",
      "jobName": "MAFIA",
      "daytimeVoted": 0,
    },
    Immutable.Map {
      "name": "대용",
      "jobName": "DOCTOR",
      "daytimeVoted": 0,
    },
    Immutable.Map {
      "name": "기수",
      "jobName": "POLICE",
      "daytimeVoted": 0,
    },
  ],
}
`;

exports[`Game 컴포넌트 >> mount 스냅샷 1`] = `
<main
  className="daytime"
>
  <h2
    className="game-title"
  >
    HELLO MAFIA
  </h2>
  Array [
    <div
      className="game-content"
    >
      <h2>
        낮 토론 시간입니다.
        <br />
         토론을 통해 마피아를 찾으세요.
      </h2>
    </div>,
    <button
      className="btn-lg"
      onClick={[Function]}
    >
      투표로 이동
    </button>,
  ]
</main>
`;

exports[`Game 컴포넌트 >> mount 클릭 1`] = `
<main
  className="daytime"
>
  <h2
    className="game-title"
  >
    HELLO MAFIA
  </h2>
  <div
    className="game-content"
  >
    <p
      className="content-description"
    >
      마피아로 의심되는 사람을 투표합니다.
    </p>
    <div
      className="voter"
    >
      한영
      님의 투표
    </div>
    <div
      className="vote-btn-container"
    >
      <div>
        <button
          className="btn-sm"
          key="vote-btn-병욱"
          onClick={[Function]}
        >
          병욱
        </button>
        <button
          className="btn-sm"
          key="vote-btn-대용"
          onClick={[Function]}
        >
          대용
        </button>
        <button
          className="btn-sm"
          key="vote-btn-기수"
          onClick={[Function]}
        >
          기수
        </button>
      </div>
    </div>
  </div>
</main>
`;

exports[`Game 컴포넌트 >> mount 클릭 2`] = `
Array [
  <button
    className="btn-sm"
    key="vote-btn-병욱"
    onClick={[Function]}
  >
    병욱
  </button>,
  <button
    className="btn-sm"
    key="vote-btn-대용"
    onClick={[Function]}
  >
    대용
  </button>,
  <button
    className="btn-sm"
    key="vote-btn-기수"
    onClick={[Function]}
  >
    기수
  </button>,
]
`;

exports[`Game 컴포넌트 >> mount 클릭 3`] = `
<main
  className="daytime"
>
  <h2
    className="game-title"
  >
    HELLO MAFIA
  </h2>
  <div
    className="game-content"
  >
    <h2>
      투표 결과
    </h2>
    <p
      className="content-description"
    >
      <span
        style={
          Object {
            "color": "#ff0000",
          }
        }
      >
        한영
      </span>
       님이 죽으셨습니다.
    </p>
    <button
      className="btn-lg"
      onClick={[Function]}
    >
      밤이 됩니다.
    </button>
  </div>
</main>
`;

exports[`Game 컴포넌트 >> mount 클릭 4`] = `
<main
  className="night"
>
  <h1>
    HELLO MAFIA
  </h1>
  Array [
    <div
      className="game-content"
    >
      <h1>
        병욱
        의 차례입니다.
      </h1>
    </div>,
    <button
      className="btn-lg"
      onClick={[Function]}
    >
      역할 확인
    </button>,
  ]
</main>
`;
